--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/jfsdproj1
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/jfsdproj1
+spring.datasource.url=jdbc:mysql://root:nkYpvlAegGsByLYXKgWpNAHriagHThPc@autorack.proxy.rlwy.net:36825/railway
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=12345@Qwerty
+#spring.datasource.password=12345@Qwerty
+spring.datasource.password=nkYpvlAegGsByLYXKgWpNAHriagHThPc
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
