--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.main.allow-circular-references=true
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=trinath2310@gmail.com
-spring.mail.password=hlyi kqvr asoc vyra
+spring.mail.username= FILL THIS
+spring.mail.password=FILL THIS
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
